# docs/swagger.yaml
@@ -27,11 +27,9 @@ definitions:
       phone:
         type: string
     required:
-    - driverType
     - email
     - name
     - password
-    - phone
     type: object
   dto.InsertBookingTransfer:
     properties:
@@ -61,18 +59,6 @@ definitions:
         type: number
       toLocation:
         type: string
-    required:
-    - adultSeater
-    - childSeater
-    - fromLatCoordinate
-    - fromLngCoordinate
-    - fromLocation
-    - passengerNotes
-    - pickUpDate
-    - price
-    - toLatCoordinate
-    - toLngCoordinate
-    - toLocation
     type: object
   dto.Response:
     properties:
@@ -118,6 +104,32 @@ definitions:
 info:
   contact: {}
 paths:
+  /auth/c/signin:
+    post:
+      consumes:
+      - application/json
+      description: A Customer authentication sign-in method
+      parameters:
+      - description: customer login
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/dto.UserLogin'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.Response'
+      summary: Customer Sign-In
+      tags:
+      - Authentication - Customer
   /auth/c/signup:
     post:
       consumes:
@@ -144,6 +156,32 @@ paths:
       summary: Customer Sign-Up
       tags:
       - Authentication - Customer
+  /auth/d/signin:
+    post:
+      consumes:
+      - application/json
+      description: A Driver authentication sign-in method for mobile apps
+      parameters:
+      - description: driver login
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/dto.UserLogin'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.Response'
+      summary: Driver Sign-In
+      tags:
+      - Authentication - Driver
   /auth/d/signup:
     post:
       consumes:
@@ -196,18 +234,19 @@ paths:
       summary: Internal Sign-Up
       tags:
       - Authentication - Internal
-  /auth/signin:
-    post:
+  /booking-assigned/transfer:
+    get:
       consumes:
       - application/json
-      description: A Global authentication sign-in method for all microservices
+      description: A GET Request to fetch a all records for driver to view booking
+        transfer that assigned and whose are not accepted by the driver
       parameters:
-      - description: global login
-        in: body
-        name: data
+      - default: Bearer <Add access token here>
+        description: Insert your access token
+        in: header
+        name: Authorization
         required: true
-        schema:
-          $ref: '#/definitions/dto.UserLogin'
+        type: string
       produces:
       - application/json
       responses:
@@ -219,9 +258,63 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/dto.Response'
-      summary: Global Sign-In
+      summary: List Booking Transfer Assigned
       tags:
-      - Authentication - Global
+      - Booking Assgined - Transfer
+  /booking-assigned/transfer/accept:
+    get:
+      consumes:
+      - application/json
+      description: A GET Request to fetch a all records for driver to view booking
+        transfer that assigned and whose are not accepted by the driver
+      parameters:
+      - default: Bearer <Add access token here>
+        description: Insert your access token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.Response'
+      summary: Method to accept booking transfer request
+      tags:
+      - Booking Assgined - Transfer
+  /booking-assigned/transfer/cancel:
+    get:
+      consumes:
+      - application/json
+      description: A GET Request to fetch a all records for driver to view booking
+        transfer that assigned and whose are not accepted by the driver
+      parameters:
+      - default: Bearer <Add access token here>
+        description: Insert your access token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.Response'
+      summary: Method to cancel booking transfer request
+      tags:
+      - Booking Assgined - Transfer
   /booking/transfer:
     post:
       consumes:
